Implemented several directives

--- a/src/Elastic.Markdown/Elastic.Markdown.csproj
+++ b/src/Elastic.Markdown/Elastic.Markdown.csproj
@@ -36,4 +36,8 @@
     <Folder Include="Myst\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Slices\Admonition\Admonition.cshtml" />
+  </ItemGroup>
+
 </Project>
