--- a/src/Elastic.Markdown/Elastic.Markdown.csproj
+++ b/src/Elastic.Markdown/Elastic.Markdown.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Markdig" Version="0.37.0"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="RazorSlices" Version="0.8.1" />
+    <PackageReference Include="Slugify.Core" Version="4.0.1" />
     <PackageReference Include="Utf8StreamReader" Version="1.3.2"/>
     <PackageReference Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.1.3" />
     <PackageReference Include="YamlDotNet" Version="16.1.3" />
@@ -30,10 +31,6 @@
     <EmbeddedResource Include="docset-templates\*.md">
       <LogicalName>$([System.String]::new('%(RelativeDir)').Replace('\','/'))%(FileName)%(Extension)</LogicalName>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Myst\" />
   </ItemGroup>
 
   <ItemGroup>
