create action yaml

--- a/.github/.github.csproj
+++ b/.github/.github.csproj
@@ -3,5 +3,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>False</IsPackable>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="..\action.yml">
+      <Link>action.yml</Link>
+    </Content>
+  </ItemGroup>
 
 </Project>
