force an update to publish a new image

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,6 +32,6 @@ jobs:
       - name: validate licenses
         run: ./build.sh validate-licenses
         
-      - name: publish AOT binary
+      - name: publish AOT 
         run: ./build.sh publish
         
