reset ContainerAppCommand, fixes a bug in .NET 8 SDK

--- a/src/docs-builder/docs-builder.csproj
+++ b/src/docs-builder/docs-builder.csproj
@@ -13,6 +13,11 @@
 
     <IsPublishable>true</IsPublishable>
     <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
+
+    <!-- attempt fix for: https://github.com/dotnet/sdk-container-builds/issues/559 
+        Fixed in upcomming .NET 9
+     -->
+    <ContainerAppCommand Include="" />
   </PropertyGroup>
 
   <ItemGroup>
