--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
           dotnet publish "src/docs-builder/docs-builder.csproj" \
             /t:PublishContainer \
             -p DebugType=none \
+            -p ContainerUser=1000:1000 \
             -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
             -p ContainerRegistry=ghcr.io \
             -p ContainerImageTags='"edge;${{ steps.bootstrap.outputs.full-version }}"' \
