--- a/src/Elastic.Markdown/Elastic.Markdown.csproj
+++ b/src/Elastic.Markdown/Elastic.Markdown.csproj
@@ -22,6 +22,11 @@
     <PackageReference Include="Utf8StreamReader" Version="1.3.2"/>
     <PackageReference Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.1.3" />
     <PackageReference Include="YamlDotNet" Version="16.1.3" />
+    <PackageReference Include="System.IO.Abstractions" Version="21.0.29" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Myst\Inline\" />
   </ItemGroup>
 
 </Project>
