--- a/src/docs-builder/docs-builder.csproj
+++ b/src/docs-builder/docs-builder.csproj
@@ -24,13 +24,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Markdig" Version="0.37.0"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0"/>
-    <PackageReference Include="RazorSlices" Version="0.8.1"/>
-    <PackageReference Include="Slugify.Core" Version="4.0.1"/>
-    <PackageReference Include="Utf8StreamReader" Version="1.3.2"/>
-    <PackageReference Include="Vecc.YamlDotNet.Analyzers.StaticGenerator" Version="16.1.3"/>
-    <PackageReference Include="YamlDotNet" Version="16.1.3"/>
+    <PackageReference Include="Github.Actions.Core" Version="8.1.1"/>
   </ItemGroup>
 
   <ItemGroup>
