--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ permissions:
 
 env:
   NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
-  IMAGE_NAME: mpdreamz/docs-builder
+  IMAGE_NAME: elastic/docs-builder
   BASE_IMAGE: mcr.microsoft.com/dotnet/nightly/runtime-deps:8.0-jammy-chiseled-aot
   DOCKER_TAG: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'latest;edge' || 'edge' }}
 
@@ -37,9 +37,9 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5.0.0
       - name: Build documentation
-        uses: Mpdreamz/docset-builder@main
+        uses: elastic/docs-builder@main
         with:
-          prefix: "docset-builder"
+          prefix: "docs-builder"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
