--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build documentation
-        uses: Mpdreamz/docset-builder@main
+        uses: elastic/docs-builder@main
   
   build:
     runs-on: ubuntu-latest
