--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -12,9 +12,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="(SolutionRoot)/build/nuget-icon.png" Pack="True" Link="nuget-icon.png" PackagePath="nuget-icon.png" CopyToOutputDirectory="PreserveNewest" />
-    <None Include="(SolutionRoot)/LICENSE.txt" Pack="True" PackagePath="LICENSE.txt" CopyToOutputDirectory="PreserveNewest" />
-    <None Include="$(SolutionRoot)/NOTICE.txt" CopyToOutputDirectory="PreserveNewest" Pack="True" PackagePath="NOTICE.txt" />
+    <Content Include="$(SolutionRoot)\build\nuget-icon.png" Pack="True" Link="nuget-icon.png" PackagePath="nuget-icon.png" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="$(SolutionRoot)\LICENSE.txt" Pack="True" PackagePath="LICENSE.txt" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="$(SolutionRoot)\NOTICE.txt" Pack="True" PackagePath="NOTICE.txt" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
