--- a/action.yml
+++ b/action.yml
@@ -12,5 +12,5 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/mpdreamz/docs-builder:edge'
+  image: "docker://ghcr.io/${{ github.repository }}:edge"
   
