--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,9 @@ jobs:
       url: ${{steps.deployment.outputs.page_url}}
     steps:
       - id: repo-basename
+        shell: bash
         run: |
           echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT
-      - shell: bash
       - uses: actions/checkout@v4
       - name: Setup Pages
         id: pages
