--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,7 @@ permissions:
 
 env:
   NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
-  #IMAGE_NAME: "${{ github.repository }}"
-  IMAGE_NAME: Mpdreamz/docset-builder
+  IMAGE_NAME: '${{ github.repository }}'
   BASE_IMAGE: mcr.microsoft.com/dotnet/nightly/runtime-deps:8.0-jammy-chiseled-aot
   DOCKER_TAG: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'latest;edge' || 'edge' }}
 
@@ -35,8 +34,7 @@ jobs:
     steps:
       - id: repo-basename
         shell: bash
-        run: |
-          echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT
+        run: 'echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT'
       - uses: actions/checkout@v4
       - name: Setup Pages
         id: pages
