--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ permissions:
 
 env:
   NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
-  IMAGE_NAME: '${{ github.repository }}'
   BASE_IMAGE: mcr.microsoft.com/dotnet/nightly/runtime-deps:8.0-jammy-chiseled-aot
   DOCKER_TAG: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'latest;edge' || 'edge' }}
 
@@ -32,6 +31,9 @@ jobs:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
     steps:
+      - id: repo-basename
+        shell: bash
+        run: 'echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT'
       - uses: actions/checkout@v4
       - name: Setup Pages
         id: pages
@@ -39,7 +41,7 @@ jobs:
       - name: Build documentation
         uses: Mpdreamz/docset-builder@main
         with:
-          prefix: 'docset-builder'
+          prefix: '${{ steps.repo-basename.outputs.value }}'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
@@ -78,4 +80,4 @@ jobs:
             -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
             -p ContainerRegistry=ghcr.io \
             -p ContainerImageTags='"${{ env.DOCKER_TAG }};${{ steps.bootstrap.outputs.full-version }}"' \
-            -p ContainerRepository=${{ env.IMAGE_NAME }} \
+            -p ContainerRepository=${{ github.repository }} \
