--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
     steps:
+      - id: repo-basename
+        run: 'echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT'
       - uses: actions/checkout@v4
       - name: Setup Pages
         id: pages
@@ -37,7 +39,7 @@ jobs:
       - name: Build documentation
         uses: Mpdreamz/docset-builder@main
         with:
-          prefix: 'docset-builder'
+          prefix: '${{ steps.repo-basename.outputs.value }}'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
