disable push on elastic/docs-builder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ env:
 
 jobs:
   deploy:
+    if: ${{ github.repository != 'elastic/docs-builder' }}
     runs-on: ubuntu-latest
     permissions:
       pages: write
