--- a/docs/source/docset.yml
+++ b/docs/source/docset.yml
@@ -1,8 +1,25 @@
 project: 'doc-builder'
+# docs-builder will warn for links to external hosts not declared here
+external_hosts:
+  - slack.com
+  - mystmd.org
+  - microsoft.com
+  - azure.com
+  - mistral.ai
+  - amazon.com
+  - python.org
+  - cohere.com
+  - docker.com
+  - langchain.com
+  - nodejs.org
+  - yarnpkg.com
+  - react.dev
+  - palletsprojects.com
 exclude:
   - '_*.md'
 toc:
   - file: index.md
+  - folder: markup
   - folder: elastic
     children:
       - file: index.md
@@ -24,7 +41,6 @@ toc:
             children:
               - file: search/req.md
               - file: search/setup.md
-  - folder: markup
   - folder: nested
     children:
       - folder: content
