--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5.0.0
       - name: Build documentation
-        uses: elastic/doc-builder@main
+        uses: elastic/docs-builder@main
         with:
           prefix: '${{ steps.repo-basename.outputs.value }}'
       - name: Upload artifact
