--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,9 +69,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish app
+      - name: Publish docs-builder
         run: |
           dotnet publish "src/docs-builder/docs-builder.csproj" \
+            /t:PublishContainer \
+            -p DebugType=none \
+            -p ContainerUser=1001:1001 \
+            -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
+            -p ContainerRegistry=ghcr.io \
+            -p ContainerImageTags='"${{ env.DOCKER_TAG }};${{ steps.bootstrap.outputs.full-version }}"' \
+            -p ContainerRepository=${{ github.repository }} \
+
+      - name: Publish docs-generator
+        run: |
+          dotnet publish "src/docs-generator/docs-generator.csproj" \
             /t:PublishContainer \
             -p DebugType=none \
             -p ContainerUser=1001:1001 \
