--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,9 +69,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: repo-basename
-        run: 'echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT'
-
       - name: Publish docs-builder
         run: |
           dotnet publish "src/docs-builder/docs-builder.csproj" \
@@ -81,7 +78,8 @@ jobs:
             -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
             -p ContainerRegistry=ghcr.io \
             -p ContainerImageTags='"${{ env.DOCKER_TAG }};${{ steps.bootstrap.outputs.full-version }}"' \
-            -p ContainerRepository=${{ steps.repo-basename.outputs.value }}/docs-builder \
+            -p ContainerRepository=${{ github.repository }} \
+            -p ContainerImageName=docs-builder
 
       - name: Publish docs-generator
         run: |
@@ -92,4 +90,5 @@ jobs:
             -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
             -p ContainerRegistry=ghcr.io \
             -p ContainerImageTags='"${{ env.DOCKER_TAG }};${{ steps.bootstrap.outputs.full-version }}"' \
-            -p ContainerRepository=${{ steps.repo-basename.outputs.value }}/docs-generator \
+            -p ContainerRepository=${{ github.repository }} \
+            -p ContainerImageName=docs-generator
