remove leftover ContainerImageName

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,7 @@ jobs:
             -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
             -p ContainerRegistry=ghcr.io \
             -p ContainerImageTags='"${{ env.DOCKER_TAG }};${{ steps.bootstrap.outputs.full-version }}"' \
-            -p ContainerRepository=${{ github.repository }} \
-            -p ContainerImageName=docs-builder
+            -p ContainerRepository=${{ github.repository }} 
 
       - name: Publish docs-generator
         run: |
