Revert action.yml

--- a/action.yml
+++ b/action.yml
@@ -11,21 +11,5 @@ inputs:
     required: false
 
 runs:
-  - id: repo-basename
-    run: 'echo "value=`basename ${{ github.repository }}`" >> $GITHUB_OUTPUT'
-  - uses: actions/checkout@v4
-  - name: Setup Pages
-    id: pages
-    uses: actions/configure-pages@v5.0.0
-  - name: Build documentation
-    uses: elastic/docs-builder@main
-    with:
-      prefix: '${{ steps.repo-basename.outputs.value }}'
-  - name: Upload artifact
-    uses: actions/upload-pages-artifact@v3.0.1
-    with:
-      path: .artifacts/docs/html
-
-  - name: Deploy artifact
-    id: deployment
-    uses: actions/deploy-pages@v4.0.5
+  using: 'docker'
+  image: "docker://ghcr.io/elastic/docs-builder:edge"
