generator container needs 8.0-jammy-chiseled so libstdc++.so is available

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ permissions:
 
 env:
   BASE_IMAGE: mcr.microsoft.com/dotnet/nightly/runtime-deps:8.0-jammy-chiseled-aot
+  BASE_IMAGE_SINGLE: mcr.microsoft.com/dotnet/nightly/runtime-deps:8.0-jammy-chiseled
   DOCKER_TAG: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && 'latest;edge' || 'edge' }}
 
 jobs:
@@ -86,7 +87,7 @@ jobs:
             /t:PublishContainer \
             -p DebugType=none \
             -p ContainerUser=1001:1001 \
-            -p ContainerBaseImage=${{ env.BASE_IMAGE }} \
+            -p ContainerBaseImage=${{ env.BASE_IMAGE_SINGLE }} \
             -p ContainerRegistry=ghcr.io \
             -p ContainerImageTags='"${{ env.DOCKER_TAG }};${{ steps.bootstrap.outputs.full-version }}"' \
             -p ContainerRepository=elastic/docs-generator \
