fix bad JSON in cat'd vercel.json

--- a/actions/publish-vercel/action.yml
+++ b/actions/publish-vercel/action.yml
@@ -29,7 +29,7 @@ runs:
         {
           "version": 2,
           "public": false,
-          "outputDirectory": ".artifacts/docs/html"
+          "outputDirectory": ".artifacts/docs/html",
           "git": {
             "deploymentEnabled": false
           }
