Update Syntax Guide (#117)
Co-authored-by: Martijn Laarman <Mpdreamz@gmail.com>

--- a/docs/source/docset.yml
+++ b/docs/source/docset.yml
@@ -19,30 +19,30 @@ exclude:
   - '_*.md'
 toc:
   - file: index.md
-  - folder: markup
-  - folder: elastic
+  - folder: syntax
     children:
       - file: index.md
-      - folder: observability
-      - folder: reference
-      - folder: semantic-search
-      - folder: search-labs
-        children:
-          - file: index.md
-          - file: install.md
-            children:
-              - file: install/cloud.md
-              - file: install/docker.md
-          - file: chat.md
-            children:
-              - file: chat/req.md
-              - file: chat/rag.md
-          - file: search.md
-            children:
-              - file: search/req.md
-              - file: search/setup.md
-  - folder: nested
+      - file: admonitions.md
+      - file: automated_settings.md
+      - file: code.md
+      - file: conditionals.md
+      - file: dropdowns.md
+      - file: example_blocks.md
+      - file: file_inclusion.md
+      - file: frontmatter.md
+      - file: images.md
+      - file: links.md
+      - file: passthrough.md
+      - file: applies.md
+      - file: sidebars.md
+      - file: substitutions.md
+      - file: sundries.md
+      - file: tables.md
+      - file: tabs.md
+      - file: tagged_regions.md
+      - file: titles.md
+  - folder: testing
     children:
-      - folder: content
       - file: index.md
-  - folder: versioning
+      - file: req.md
+      - folder: nested
