--- a/src/docs-builder/docs-builder.csproj
+++ b/src/docs-builder/docs-builder.csproj
@@ -1,26 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <AssemblyName>docs-builder</AssemblyName>
     <RootNamespace>Documentation.Builder</RootNamespace>
     <InvariantGlobalization>true</InvariantGlobalization>
+
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <PublishAot>true</PublishAot>
     <EnableRequestDelegateGenerator>true</EnableRequestDelegateGenerator>
     <InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Microsoft.AspNetCore.Http.Generated</InterceptorsPreviewNamespaces>
 
     <IsPublishable>true</IsPublishable>
+    <PublishAot>true</PublishAot>
+    <PublishTrimmed>true</PublishTrimmed>
     <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
-
-    <!-- attempt fix for: https://github.com/dotnet/sdk-container-builds/issues/559 
-        Fixed in upcomming .NET 9
-     -->
+    <TrimmerSingleWarn>false</TrimmerSingleWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ConsoleAppFramework" Version="5.2.4">
+    <PackageReference Include="ConsoleAppFramework" Version="5.3.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -28,7 +27,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0"/>
     <PackageReference Include="Github.Actions.Core" Version="8.1.1"/>
     <PackageReference Include="Westwind.AspNetCore.LiveReload" Version="0.5.0" />
-    <PackageReference Include="Chorn.EmbeddedResourceAccessGenerator" Version="1.1.5" />
   </ItemGroup>
 
   <ItemGroup>
