--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,10 +30,13 @@ jobs:
       - name: Bootstrap Action Workspace
         id: bootstrap
         uses: ./.github/actions/bootstrap
-        
-      - name: build
+
+      - name: Build
         run: ./build.sh
-        
-      - name: publish AOT 
-        run: ./build.sh publish
+
+      - name: Test
+        run: ./build.sh test
+
+      - name: Publish AOT
+        run: ./build.sh publishbinaries
         
