update how we pass labels to image tags

--- a/.github/actions/bootstrap/action.yml
+++ b/.github/actions/bootstrap/action.yml
@@ -26,7 +26,7 @@ runs:
       shell: bash
       run: |
         dotnet tool restore
-        REPO_VERSION=$(dotnet minver -t=v -p=canary.0 -v=e)
+        REPO_VERSION=$(dotnet minver -t=v -p=canary.0 -v=e -m=0.1)
         echo "Version Number: ${REPO_VERSION}"
         echo "REPO_VERSION=${REPO_VERSION}" >> $GITHUB_ENV
         echo "full-version=${REPO_VERSION}" >> $GITHUB_OUTPUT
