ensure we call bash on windows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Publish Binaries
         run: ./build.sh publishzip
+        shell: bash
 
       - name: Attach Distribution to release
         env:
