More docs updates (#136)

--- a/docs/source/docset.yml
+++ b/docs/source/docset.yml
@@ -19,6 +19,32 @@ exclude:
   - '_*.md'
 toc:
   - file: index.md
+  - folder: migration
+    children:
+      - file: index.md
+      - file: file-structure.md
+  - folder: contribute
+    children:
+      - file: index.md
+      - file: change-browser.md
+      - file: change-local.md
+  - folder: configure
+    children:
+      - file: index.md
+      - folder: site
+        children:
+          - file: index.md
+          - file: content.md
+          - file: shared-attributes.md
+          - file: landing-page.md
+          - file: redirects.md
+      - folder: content-set
+        children:
+          - file: index.md
+          - file: file-structure.md
+          - file: attributes.md
+          - file: navigation.md
+      - file: page.md
   - folder: syntax
     children:
       - file: index.md
