--- a/docs/docset.yml
+++ b/docs/docset.yml
@@ -43,6 +43,9 @@ toc:
       - folder: guide
         children:
           - file: index.md
+          - file: automated.md
+          - file: tooling.md
+          - file: bug-bash.md
           - file: file-structure.md
           - file: mapping.md
   - folder: configure
@@ -52,7 +55,6 @@ toc:
         children:
           - file: index.md
           - file: content.md
-          - file: shared-attributes.md
           - file: landing-page.md
           - file: redirects.md
       - folder: content-set
@@ -75,6 +77,7 @@ toc:
       - file: file_inclusion.md
       - file: frontmatter.md
       - file: images.md
+      - file: line_breaks.md
       - file: links.md
       - file: passthrough.md
       - file: applies.md
