Add error exit code if there are changes for the asciidoc comment workflow (#357)

--- a/.github/workflows/comment-on-asciidoc-changes.yml
+++ b/.github/workflows/comment-on-asciidoc-changes.yml
@@ -33,3 +33,6 @@ jobs:
               issue_number: context.payload.pull_request.number,
               body: 'It looks like this PR modifies one or more `.asciidoc` files. These files are being migrated to Markdown, and any changes merged now will be lost. See the [migration guide](https://elastic.github.io/docs-builder/migration/freeze/index.html) for details.'
             })
+      - name: Error if .asciidoc files changed
+        if: steps.check-files.outputs.asciidoc_changed == 'true'
+        run: exit 1
