Add `docs-builder mv` command (#376)
* Add mv command

* Add license header

* Also change links in source file

* ok

* Add tests

* ok

* Fix help text

* fix

* fix

* Fix

--- a/docs/docset.yml
+++ b/docs/docset.yml
@@ -98,3 +98,7 @@ toc:
       - file: req.md
       - folder: nested
       - file: cross-links.md
+      - folder: mover
+        children:
+          - file: first-page.md
+          - file: second-page.md
