Add redesign feature flag (#392)
* Set up tailwindcss

* Set up theme

* Fix NpmRunBuild condition

* Remove condition again

* Add redesign feature flag and basic hljs setup

* Remove cssnano and fix package.json

* Revert

* Revert

--- a/src/Elastic.Markdown/package.json
+++ b/src/Elastic.Markdown/package.json
@@ -24,12 +24,16 @@
   },
   "private": true,
   "devDependencies": {
-    "parcel": "2.13.3"
+    "parcel": "2.13.3",
+    "postcss": "^8.5.1",
+    "postcss-import": "^16.1.0",
+    "@tailwindcss/postcss": "^4.0.3"
   },
   "browserslist": [
     "defaults"
   ],
   "dependencies": {
-    "highlight.js": "^11.11.1"
+    "highlight.js": "^11.11.1",
+    "tailwindcss": "^4.0.3"
   }
 }
