Migration and Syntax docs updates (#416)
* various internal docs improvements

* fix bug; add mv docs

* more bugs

* last bug

--- a/docs/docset.yml
+++ b/docs/docset.yml
@@ -18,6 +18,7 @@ external_hosts:
   - google.com
   - checkvist.com
   - commonmark.org
+  - github.io
 exclude:
   - '_*.md'
 subs:
@@ -30,6 +31,7 @@ toc:
       - file: index.md
       - file: locally.md
       - file: on-the-web.md
+      - file: move.md
   - folder: migration
     children:
       - file: index.md
@@ -44,10 +46,9 @@ toc:
       - folder: guide
         children:
           - file: index.md
+          - file: working-in-docs-content.md
           - file: automated.md
           - file: tooling.md
-          - file: bug-bash.md
-          - file: file-structure.md
           - file: mapping.md
   - folder: configure
     children:
@@ -68,8 +69,8 @@ toc:
   - folder: syntax
     children:
       - file: index.md
-      - file: md-extensions.md
       - file: admonitions.md
+      - file: applies.md
       - file: automated_settings.md
       - file: code.md
       - file: comments.md
@@ -82,7 +83,6 @@ toc:
       - file: line_breaks.md
       - file: links.md
       - file: passthrough.md
-      - file: applies.md
       - file: sidebars.md
       - file: substitutions.md
       - file: sundries.md
