--- a/docs/docset.yml
+++ b/docs/docset.yml
@@ -19,6 +19,7 @@ external_hosts:
   - checkvist.com
   - commonmark.org
   - github.io
+  - github.com
 exclude:
   - '_*.md'
 subs:
@@ -50,6 +51,7 @@ toc:
           - file: automated.md
           - file: tooling.md
           - file: mapping.md
+          - file: how-to-set-up-docs-previews.md
   - folder: configure
     children:
       - file: index.md
